# uubed

./: AGENTS.md  BUILD_AND_RELEASE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY_METRICS.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD.md  GITHUB_ACTIONS_WORKFLOWS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PLAN.md  PROGRESS.md  PROJECT.md  README.md  SECURITY.md  TODO.md  llms.txt  pyproject.toml  run.py
.github/: RELEASE_TEMPLATE.md
.github/DISCUSSION_TEMPLATES/: general.yml  integration.yml  performance.yml
.github/ISSUE_TEMPLATE/: config.yml  cross-cutting-issue.md  feature-request.md
.github/workflows/: README.md  changelog-aggregation.yml  ci.yml  community-metrics.yml  nightly-benchmarks.yml  orchestrate-builds.yml  project-dashboard.yml  push.yml  release-coordination.yml  release.yml  test.yml
benchmarks/: bench_encoders.py
docs/: Makefile
docs/source/: api-reference.md  conf.py  contributing.md  index.rst  overview.md  quickstart.md  troubleshooting.md
examples/: advanced_usage.py  basic_usage.py  batch_processing.py  benchmarking.py  error_handling.py  matryoshka_demo.py  multimodal_embeddings.py  search_engine_integration.py  streaming_encoder.py  vector-database-integrations.md  vector_database_integration.py  web_api_example.py
research/: README.md  __init__.py  chat1.md  chat2.md  glossary.md  matryoshka-integration-analysis.md  mq64-prototype-plan.md  mq64-specification.md  voyemb.py
rust/: pyproject.toml
rust/src/: bindings.rs
scripts/: build.py  get_version.py  release.py  test.py
src/uubed/: api.py
tests/: __init__.py  test_build.py  test_core_functions.py  test_edge_cases.py  test_encoders.py  test_research.py  test_research_init.py  test_version.py
work/: matryoshka-research-gpt.md  voyemb.txt
