[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uubed-project"
description = "Main project hub for the uubed high-performance embedding encoding library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "uubed contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "rich>=10.0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/twardoch/uubed"
Repository = "https://github.com/twardoch/uubed"
"Bug Tracker" = "https://github.com/twardoch/uubed/issues"

[tool.hatch.version]
source = "code"
path = "scripts/get_version.py"

[tool.hatch.build.targets.wheel]
packages = ["research"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.envs.docs]
dependencies = [
    "sphinx>=7.0.0",
    "sphinx-book-theme>=1.0.0",
    "sphinx-copybutton>=0.5.0",
    "myst-parser>=2.0.0",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs/source docs/build/html"
serve = "python -m http.server --directory docs/build/html 8000"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=research {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov-html = [
    "- coverage combine", 
    "coverage html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]